# VideoPointerTool

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  pageindicator.cpp  pageindicator.h  player.cpp  waitinglabel.cpp
Dao/: HikOpenSdk.cpp  HikOpenSdk.h  videoencode.h
Service/: resetserviceqt.cpp  resetserviceqt.h  restserviceconcurrent.cpp  restserviceconcurrent.h  servicefacetory.h  servicei.h  videoencodebyffmpeg.cpp
VideoWidget/: renderthread.cpp  renderthread.h  videowidget.cpp  videowidget.h
VideoWidget/videodecode/: ffmpegcpudecode.cpp  ffmpegcudadecode.cpp  ffmpegqsvdecode.cpp  nvidia_decoer_api.h  nvidiadecode.cpp
